# strided-iterator

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: conan.cmake
include/: buffer_2d.hpp  strided_iterator.hpp
test/: CMakeLists.txt  buffer_2d_test.cpp
